# WiFi-TTA-Bench

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-lock.txt
pinn4csi/: __init__.py
scripts/: analyze_tta_adaptation.py  analyze_tta_results.py  analyze_widar_overconfidence.py  anonymization_audit.py  audit_readiness.py  build_method_coverage_matrix.py  compare_wifi_imaging_baselines.py  create_capture_manifest.py  evaluate_wifi_imager.py  feasibility.py  feasibility_classification.py  generate_figures.py  init_external_worktree.py  make_paper2_tta_artifacts.py  prepare_data.py  prepare_submission_bundle.sh  prepare_widar_bvp.py  regen_croissant_for_hf.py  regenerate_fig1_with_signfi.py  reproduce_all_results.py  run_advanced_physics_experiments.py  run_all_neurips_experiments.py  run_arch_ablation_with_ci.py  run_db_ablations.py  run_diagnosis_experiments.py  run_extended_tta_per_dataset.py  run_neural_operator_experiments.py  run_ntufi_experiments.py  run_paper1_experiments.py  run_selective_threshold_widar.py  run_source_overfit_mitigation.py  run_synthetic_classification.py  run_tta_experiments.py  run_widar_faithful_sar_cotta.py  run_widar_full_tta.py  run_wifi_imaging_experiments.py  train.py  train_supervised_upper_bound.py  train_wifi_imager.py  upload_huggingface.sh  (+2 more)
tests/: conftest.py  test_analyze_tta_results.py  test_audit_readiness.py  test_backprojection.py  test_collection_loaders.py  test_create_capture_manifest.py  test_csi_pinn.py  test_data.py  test_domain_invariant.py  test_feasibility.py  test_feasibility_classification.py  test_framework_api.py  test_helmholtz.py  test_init_external_worktree.py  test_models.py  test_neural_operator.py  test_neural_operator_experiments.py  test_paper1_experiments.py  test_paper2_baselines.py  test_paper2_tta.py  test_physics.py  test_prepare_data.py  test_training.py  test_tta_analysis.py  test_validate_capture_bundle.py  test_wifi_imager.py  (+3 more)
wifi_tta_bench/: api.py  (+1 more)
(+85 files in other folders)
